# Signal-You-Messenger

./: .env.example  .gitignore  App.tsx  BUILDING.md  Cargo.toml  README.md  build.rs  electron-builder.json  index.html  meson.build  meson_options.txt  metadata.json  package.json  tsconfig.json  types.ts  vite.config.ts
components/: ChatList.tsx  ChatWindow.tsx  ContactList.tsx  Sidebar.tsx
contexts/: ThemeContext.tsx
data/: com.signalyou.Messenger.desktop.in  com.signalyou.Messenger.gschema.xml  com.signalyou.Messenger.metainfo.xml.in  meson.build
data/icons/: meson.build
debian/: changelog  control  copyright  rules  signal-you-messenger.desktop  signal-you-messenger.sh
electron/: main.js  preload.js
flatpak/: com.signalyou.Messenger.desktop  com.signalyou.Messenger.metainfo.xml  com.signalyou.Messenger.yml  signal-you-messenger.sh
po/: LINGUAS  POTFILES.in  meson.build
scripts/: build-deb.sh  build-flatpak.sh  generate-icons.sh  postinst.sh  postrm.sh
server/: .env.example  index.js  package.json
server/config/: database.js  env.js
server/middleware/: auth.js  validation.js
server/models/: ChatSession.js  Contact.js  Message.js  Settings.js  User.js
server/routes/: ai.js  auth.js  chats.js  contacts.js  settings.js  upload.js
server/services/: gemini.js  websocket.js
services/: gemini.ts
src/: App.tsx  application.rs  config.rs  config.rs.in  index.tsx  main.rs  meson.build  signal-you-messenger.gresource.xml  style.css  types.ts  window.rs
src/components/: AuthForm.tsx  ChatList.tsx  ChatWindow.tsx  ContactList.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  Settings.tsx  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/services/: api.ts  electron.ts  mod.rs  notifications.rs  sync.rs  websocket.rs  websocket.ts
src/signal/: client.rs  crypto.rs  mod.rs  protocol.rs  ratchet.rs  store.rs  types.rs  x3dh.rs
src/store/: index.ts
src/test/: setup.ts
src/test/components/: AuthForm.test.tsx
src/test/store/: store.test.ts
src/ui/: chat_list.blp  chat_list.rs  chat_list.ui  chat_view.blp  chat_view.rs  chat_view.ui  compose_bar.blp  compose_bar.rs  compose_bar.ui  contact_row.blp  contact_row.rs  contact_row.ui  link_device_view.blp  link_device_view.rs  link_device_view.ui  message_row.blp  message_row.rs  message_row.ui  mod.rs  window.blp  window.ui
