[package]
name = "signal-you-messenger"
version = "1.0.0"
edition = "2021"
authors = ["Signal You Team"]
description = "A GTK4/libadwaita Material You fork of Signal Messenger for Linux"
license = "GPL-3.0-or-later"
repository = "https://github.com/phlthy88/Signal-You-Messenger"
keywords = ["signal", "messenger", "gtk", "gnome", "chat"]
categories = ["gui"]
rust-version = "1.75"

[dependencies]
# GTK4 and libadwaita
gtk4 = { version = "0.8", features = ["v4_12"] }
libadwaita = { version = "0.6", features = ["v1_4"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-channel = "2.1"
futures = "0.3"

# Signal Protocol
libsignal-protocol = "0.1"
# Note: Full Signal integration requires additional crates from signalapp
# poksho = "0.1"  # Signal's zero-knowledge proofs
# zkgroup = "0.1"  # Group protocol

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (encrypted)
rusqlite = { version = "0.31", features = ["bundled", "sqlcipher"] }

# HTTP client for Signal servers
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# WebSocket for Signal push
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# Cryptography
ring = "0.17"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# QR code for device linking
qrcode = "0.13"
image = "0.24"

# Logging
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
directories = "5.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# i18n
gettext-rs = { version = "0.7", features = ["gettext-system"] }

# Protobuf for Signal protocol messages
prost = "0.12"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tempfile = "3.9"

[features]
default = []
development = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
